gl33-master/src/test/deca/syntax/valid/others/semiEnPlus.deca
/*
Test sur l'ajout de point virgule dans un fihcier deca

Attention : si le fichier est modifié, il faut le vérifier à nouveau et
copier la sortie dans src/test/deca/valid/others/expected

*/

{
    print("Hello");;
}
