gl33-master/src/test/deca/syntax/invalid/others/parentheseEnMoinsWhileMethode1.deca
/*
Test sur le manque de plusieurs parenthèse à la fin de while dans une fonction

Attention : si le fichier est modifié, il faut le vérifier à nouveau et
copier la sortie dans src/test/deca/invalid/others/expected

*/

class MyClass{
  boolean a = true;

  int myFunc(){
    while (a {
      print("hello");
    }
    return 1;
  }
}

{

}
